# C_xdg_base_directory

./: README.md  meson.build
include/: xdg_path.h
src/: dir.c  meson.build  xdg_path.c
test/: dir.c  meson.build
